Closed Bug 102257 Opened 23 years ago Closed 23 years ago

Printing crashes if all the print.printt(header|footer)* prefs are empty strings

Categories

(Core :: Printing: Output, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: bzbarsky, Assigned: rods)

References

Details

(Keywords: crash)

Attachments

(1 file)

When I set the preferences like this:

user_pref("print.print_footerleft", "");
user_pref("print.print_footercenter", "");
user_pref("print.print_footerright", "");
user_pref("print.print_headerleft", "");
user_pref("print.print_headercenter", "");
user_pref("print.print_headerright", "");

Printing crashes.  spun off of bug 99415
is this the same as 102247 ? please DUP them if they are...thanks.
*** Bug 102247 has been marked as a duplicate of this bug. ***
reviews?
Severity: normal → critical
Keywords: crash, patch, review
It's always something.... :)
r=rods
taking bug
Assignee: dcone → rods
Rod, will you be checking this in then?  Or should I?
Checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Boris, please verify on trunk when you get chance....
verified on current trunk.  I don't crash anymore.
Status: RESOLVED → VERIFIED
please checkin to the 0.9.4 branch and mark w/ "fixed0.9.4" once it's landed
there. This is a low risk change w/ some good benefit.
Keywords: edt0.9.4+
When is this landing.
as soon as someone with a 0.9.4 tree lands it...  I do not have such a tree.
Patch checked into the 0.9.4 branch now...
Keywords: fixed0.9.4
verified on 1/13 branch build. 
Keywords: verified0.9.4
Keywords: fixed0.9.4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: