Move the zero-check to before we divide by the number. Fixes crash when all 3 header or all 3 footer print prefs are empty strings. Bug 102257, r=rods, sr=shaver